2006-07-06  David Edelsohn  <edelsohn@gnu.org>

	PR target/28150
	* config/rs6000/rs6000.c (rs6000_legitimate_address): Do not allow
	PRE_{INC,DEC} of TFmode.

2006-07-06  David Edelsohn  <edelsohn@gnu.org>
	    Alan Modra  <amodra@bigpond.net.au>

	PR target/28170
	* config/rs6000/rs6000.c (insvdi_rshift_rlwimi_p): Correct shiftop
	bounds. Simplify.

2006-07-17  Richard Henderson  <rth@redhat.com>

	PR 27889
	* tree-nested.c (create_tmp_var_for): Set DECL_COMPLEX_GIMPLE_REG_P
	if needed.

2006-01-11  Diego Novillo  <dnovillo@redhat.com>

	* tree-cfg.c (tree_node_can_be_shared): Handle IDENTIFIER_NODE.

2006-07-18  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c/28286
	* c-pragma.c (handle_pragma_pack): Handle invalid constants.

2006-07-18  Andrew Haley  <aph@redhat.com>

	PR tree-optimization/19505
	* tree-cfgcleanup.c (tree_forwarder_block_p): If we have an EH
	edge leaving this block, make sure that the destination of this
	block has only one predecessor.

2006-07-18  Alexandre Oliva  <aoliva@redhat.com>

	PR c/26993
	* c-common.c (handle_weakref_attribute): Ignore attribute in
	the same conditions the alias attribute is ignored.

2006-07-16  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/install.texi (sparc-sun-solaris2*): Add GMP version number.

2006-07-12  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/27878
	* doc/install.texi (mips-sgi-irix6): Add note about IRIX 6.5.x,
	x < 19, vs wchar_t support.

2006-07-12  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/28187
	* tree-vrp.c (vrp_operand_equal_p): New function.
	(vrp_bitmap_equal_p): Likewise.
	(update_value_range): Use them to compare old and new
	max and min values.

2006-07-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/28162
	* fold-const.c (fold_binary): For (-A) * (-B) -> A * B
	make sure to convert the operands to the correct type.

2006-07-08  Matthias Klose  <doko@debian.org>

	* doc/sourcebuild.texi: Fix typo.
