@@ -1,3 +1,7 @@
+2006-06-04  Mark Shinwell  <shinwell@codesourcery.com>
+
+	* gcc.c-torture/compile/builtin_constant_p.c: New test.
+
 2006-07-16  Jakub Jelinek  <jakub@redhat.com>
 
 	* lib/scantree.exp (scan-tree-dump, scan-tree-dump-times,
